src/test/compile-fail/extenv-not-string-literal.rs
// error-pattern:malformed #env call

fn main() {
  #env(10);
}
